--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@ table.table-fit thead th, table.table-fit tfoot th {
 table.table-fit tbody td, table.table-fit tfoot td {
     width: auto !important;
 }
+.table-bordered{
+
+font-size: 12px;
+
+}
   </style>
 
 <div class="container mt-3">
