--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@ table.table-fit tbody td, table.table-fit tfoot td {
     width: auto !important;
 }
 .table-bordered{
-
-font-size: 12px;
-
+font-size: 11px;
+}
+.mt-3{
+  margin-left: 20px;
 }
   </style>
 
