--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ table.table-fit tbody td, table.table-fit tfoot td {
           <tr>
             <td>California</td>
             <td>San Diego</td>
-            <td>villa Rancho</td>
+            <td>Villa Rancho</td>
             <td></td>
             <td></td>
             <td></td>
