--- a/index.html
+++ b/index.html
@@ -127,6 +127,26 @@
       <td><a href= "https://www.oanow.com/news/local/opelika-nursing-home-hit-hard-during-covid-19-outbreak/article_8d4f61e5-6f16-50c3-b228-cfdd90cd9668.html" target="_blank"> Source </a></td>
     </tr>
     <tr>
+      <td>Alaska</td>
+      <td>Fairbanks</td>
+      <td>Southeast Alaska Regional Center</td>
+      <td>1</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td><a href= "https//www.adn.com/alaska-news/2020/04/25/resident-at-long-term-care-facility-in-sitka-tests-positive-for-covid-19/" target="_blank"> Source </a></td>
+    </tr>
+    <tr>
+      <td>Alaska</td>
+      <td>Sitka</td>
+      <td>Denali Center</td>
+      <td>1</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td><a href= "https://www.adn.com/alaska-news/fairbanks/2020/03/28/resident-of-fairbanks-care-facility-tests-positive-for-covid-19/" target="_blank"> Source </a></td>
+    </tr>
+    <tr>
       <td>Arizona</td>
       <td>Chandler</td>
       <td>Pennington Gardens</td>
